--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ commands:
     steps:
       - run:
           name: Install sccache
-          command: |
+          command:
             wget https://github.com/mozilla/sccache/releases/download/v0.4.2/sccache-v0.4.2-x86_64-unknown-linux-musl.tar.gz \
             && tar xzf sccache-v0.4.2-x86_64-unknown-linux-musl.tar.gz \
             && mkdir -p $HOME/.local/bin\
